Version 2.41
---------
 * Disable building rust bindings when creating venv (#293)
 * Small code cleanups
￼
Version 2.40
---------
 * Add OpenSUSE 16 to build scripts
 * Use trixie for docker container
 * venv/create.sh fails to successfully build libnbd without python setuptools
 (#290)
 * Add support for VIR_DOMAIN_BACKUP_BEGIN_PRESERVE_SHUTDOWN_DOMAIN: As with
 libvirt version 11.10, this flag prevents VM shutdown while an backup job is
 still active. The VM is in that scenario reset and paused instead of
 terminated allowing the backup to finish. Once the backup finishes the VM
 process is terminated. See:

  https://libvirt.org/kbase/live_full_disk_backup.html#shutdown-of-the-guest-os-during-backup

Version 2.39
---------
 * Add fedora 42 to build scripts.
 * Gracefully handle network attached disk devices, show error message and
 hint (#286)

Version 2.38
---------
 [Francisco Javier]
 * virtnbdbackup: reuse existing sftp connections during backup. (#283)

 [Michael Ablassmeier]
 * virtnbdmap: replaying changes may fail with "[Errno 22] Invalid argument":
 the NBD device sometimes needs some time to settle, wait until it is seekable
 to the end of the block list instead of failing.
 * virtnbdbackup: During full backup, all old checkpoints are removed.
 Sometimes there might be situations where bitmaps are not existent anymore.
 Now, during full backup, checkpoint consistency is validated prior to
 removal, and checkpoints tied to  non-existent bitmaps will be removed with
 VIR_DOMAIN_CHECKPOINT_DELETE_METADATA_ONLY flags enabled, to allow flawless
 full backups. The utility will issue WARNINGS in this case.

 See discussion (#285)

Version 2.37
---------
 * Add missing nbdkit and python plugin to docker container image. (#282)

Version 2.36
---------
 * virtnbdbackup: add `--pause` option: Suspend and resume virtual machine
 while starting backup job. This can be useful for virtual machines where